[css] fix greetings post jump-link too close to bottom

--- a/css/blog.css
+++ b/css/blog.css
@@ -382,6 +382,7 @@ font-weight: normal;
 margin: 16px 16px 2em 16px;
 width: calc(100% - 32px);
 padding-top: 1em;
+padding-bottom: 1em;
 box-sizing: border-box;
 }
 #page_body .widget.HTML .post div, #page_middle .widget.HTML .post div{
